# marshmallow-recipe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  baseline.json  context7.json  pgo.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: bench_balance_transaction.py  bench_balance_transaction_plain.py  bench_memory.py  bench_quick.py  bench_serialization.py  compare_marshmallow_vs_speedup.py  compare_v1_vs_v2.py  comprehensive_v1_vs_v2.py  honest_comparison.py  simple_comparison.py  streaming_comparison.py  transaction_load_dump.py
benchmarks/results/: 00-baseline.txt  01-dump-to-bytes.txt  02-dump-and-load-bytes.txt  03-precomputed-keys-and-decimal.txt  04-strenum-and-decimal-opt.txt  05-uuid-hex-optimization.txt  06-final-with-load-optimization.txt  07-decimal-is-finite-opt.txt  08-streaming-json-parser.txt  09-fast-datetime-dump.txt  SUMMARY.md
docs/: ALTERNATIVE_ARCHITECTURE.md  TYPE_REFERENCE.md
examples/: 01_basic_usage.md  01_basic_usage.py  02_nested_and_collections.md  02_nested_and_collections.py  03_field_customization.md  03_field_customization.py  04_naming_cases.py  04_validation.md  05_naming_case_conversion.md  05_patch_operations.py  06_generics.py  06_patch_operations.md  07_generics.md  08_global_overrides.md  08_global_parameters.py  09_advanced_patterns.py  09_per_dataclass_overrides.md  10_advanced_features.py  10_cyclic_references.md  11_pre_load_hooks.md  12_validation_errors.md  13_json_schema_generation.md  13_value_serialization.md  14_nuked_schema.md  15_root_level_collections.md  16_literal_types.md  17_type_aliases.md  18_bytes.md  README.md
marshmallow_recipe/: __init__.py  bake.py  const.py  errors.py  fields.py  generics.py  hooks.py  json_schema.py  metadata.py  missing.py  naming_case.py  naming_strategy.py  none_value_handling.py  options.py  schema.py  serialization.py  serialization_slim.py  shared.py  utils.py  validation.py  validator.py
marshmallow_recipe/speedup/: README.md  __init__.py  _descriptor.py  _schema.py
marshmallow_recipe/v2/: __init__.py  _descriptor.py
python/marshmallow_recipe/: __init__.py  bake.py  fields.py  generics.py  hooks.py  json_schema.py  metadata.py  missing.py  options.py  serialization.py  utils.py  validation.py
python/marshmallow_recipe/nuked/: README.md  __init__.py  _container.py  _descriptor.py  _schema.py
python/marshmallow_recipe/speedup/: __init__.py  _descriptor.py  _validator.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
src/: api.rs  builder.rs  cache.rs  container.rs  container_dump.rs  container_load.rs  deserialize.rs  deserialize_bytes.rs  deserializer.rs  dump.rs  dump_bytes.rs  dumper.rs  encoding.rs  error.rs  error_convert.rs  json_ascii.rs  json_parser.rs  json_reader.rs  json_writer.rs  lib.rs  load.rs  load_bytes.rs  loader.rs  serialize.rs  serialize_bytes.rs  serializer.rs  slots.rs  types.rs  utils.rs
src/field_types/: any.rs  bool_type.rs  collection.rs  date.rs  datetime.rs  decimal.rs  dict.rs  float.rs  int.rs  int_enum.rs  nested.rs  str_enum.rs  str_type.rs  time.rs  union.rs  uuid.rs
src/fields/: any.rs  bool_literal.rs  bool_type.rs  bytes.rs  collection.rs  date.rs  datetime.rs  decimal.rs  dict.rs  float.rs  float_type.rs  helpers.rs  int.rs  int_enum.rs  int_literal.rs  int_type.rs  length.rs  mod.rs  nested.rs  range.rs  str_enum.rs  str_literal.rs  str_type.rs  time.rs  union.rs  uuid.rs
src/json/: mod.rs  parser.rs  sink.rs  writer.rs
tests/: conftest.py  test_bake.py  test_deprecations.py  test_generics.py  test_get_field_for.py  test_json_raw_field.py  test_json_schema.py  test_metadata.py  test_missing.py  test_naming_case.py  test_naming_strategy.py  test_openapi_schema.py  test_order.py  test_pre_load.py  test_serialization.py  test_unknown_fields.py  test_validation.py  test_value_serialization.py
tests/api/: conftest.py  test_any.py  test_bool.py  test_bytes.py  test_bytes_parser.py  test_date.py  test_datetime.py  test_decimal.py  test_dict.py  test_direct_slots.py  test_encoding.py  test_enums.py  test_float.py  test_frozenset.py  test_generics.py  test_int.py  test_list.py  test_literals.py  test_many.py  test_mapping.py  test_mapping_input.py  test_mapping_missing_sentinel.py  test_naming.py  test_nested.py  test_newtype.py  test_options.py  test_order.py  test_pre_load.py  test_sequence.py  test_set.py  test_str.py  test_time.py  test_tuple.py  test_type_alias.py  test_unions.py  test_unknown_fields.py  test_uuid.py  test_validation.py
tests/test_parity/: conftest.py  test_basic.py  test_collections.py  test_custom_errors.py  test_datetime_format.py  test_decimal_rounding.py  test_direct_slots.py  test_edge_cases.py  test_enums.py  test_errors.py  test_generics.py  test_item_validation.py  test_metadata.py  test_naming.py  test_nested.py  test_none_handling.py  test_optionals.py  test_post_load.py  test_primitives.py  test_unions.py  test_unknown_fields.py  test_validation.py
tests/test_speedup/: test_serialization.py
tests/test_v2/: test_serialization.py
