[package]
name = "marshmallow-recipe"
version = "0.0.0"
edition = "2021"

[lib]
name = "_nuked"
crate-type = ["cdylib"]

[features]
default = []
alloc-stats = []

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
arrayvec = "0.7"
smallbitvec = "2.6"
ahash = "0.8"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value", "arbitrary_precision"] }
once_cell = "1.19"
encoding_rs = "0.8"
uuid = "1.11"
regex = "1.10"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
