[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "marshmallow-recipe"
dynamic = ["version"]
description = "Bake marshmallow schemas based on dataclasses"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Yury Pliner", email = "yury.pliner@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "marshmallow>=2.20.5,<4",
]

[project.urls]
Homepage = "https://github.com/anna-money/marshmallow-recipe"

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.8.4",
    "pyright==1.1.407",
    "setuptools",
    "maturin>=1.9,<2.0",
    "pyperf>=2.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "marshmallow_recipe._nuked"

[tool.maturin.environment]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".claude",
    ".idea",
    "__pycache__",
    "venv",
    "benchmarks",
]

[tool.ruff.lint]
select = ["SIM","C4", "ANN", "N", "LOG", "G", "F", "E", "W", "Q", "I", "UP", "T20", "COM", "RSE", "RET", "ISC", "ASYNC", "SLOT", "RUF"]
ignore = ["COM812", "ISC001", "ASYNC109", "RUF018", "ANN401", "ANN204", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["UP007", "E741", "UP035", "RUF009"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
known-first-party = ["marshmallow_recipe"]

[tool.pytest.ini_options]
norecursedirs = [".git", ".venv", "benchmarks"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pyright]
include = ["python/marshmallow_recipe/", "tests/"]
pythonVersion = "3.12"
pythonPlatform = "All"
stubPath = ""
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateImportUsage = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUntypedFunctionDecorator = false
reportUnusedImport = false
reportMissingTypeArgument = false
reportImportCycles = false
reportDeprecated = false
